# gpx-tools

./: .gitignore  Makefile  README.md  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
gpx_tools/: cli.py  constants.py  conversion.py  formatting.py  heart_rate.py  parser.py  tcx_converter.py  visualization.py
tests/: constants.py  test_cli.py  test_conversion.py  test_formatting.py  test_heart_rate.py  test_pace.py  test_parser.py  test_tcx_converter.py  test_visualization.py
tests/test_data/: no_hr_ride.gpx  simple_ride.gpx
