[project]
name = "gpx-tools"
version = "0.1.0"
description = "GPX tools for processing outdoor activity data"
authors = [
    {name = "Rusty Roberts",email = "rust.roberts@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpxpy (>=1.6.2,<2.0.0)",
    "click (>=8.0.0,<9.0.0)"
]

[project.scripts]
gpx-tools = "gpx_tools.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.0,<0.14.0)",
    "pyright (>=1.1.405,<2.0.0)"
]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingParameterType = "error"
reportMissingReturnType = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
