[project]
name = "gpx-tools"
version = "0.1.0"
description = "GPX tools for processing outdoor activity data"
authors = [
    {name = "Rusty Roberts",email = "rust.roberts@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpxpy>=1.6.2",
    "click>=8.0.0",
    "lxml>=6.0.1",
    "asciichartpy>=1.5.25"
]

[project.scripts]
gpx-tools = "gpx_tools.cli:main"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "types-lxml>=2025.8.25",
    "pytest-stub>=1.1.0"
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=gpx_tools --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
source = ["gpx_tools"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
